syntax = "proto3";

package tools.teal.pulsar.demoapp.warehouse.v1;

import "tools/teal/pulsar/demoapp/dto/v1/dto.proto";

message ReceiveInventoryItem {
    string inventory_id = 1;
    tools.teal.pulsar.demoapp.dto.v1.Product product = 2;
    string cost = 3;
    int32 quantity = 4;
}

message IncreaseInventoryAdjust {
    string inventory_id = 1;
    string item_id = 2;
    int32 quantity = 3;
    string reason = 4;
}

message DecreaseInventoryAdjust {
    string inventory_id = 1;
    string item_id = 2;
    int32 quantity = 3;
    string reason = 4;
}

message ReserveInventoryItem {
    string inventory_id = 1;
    string catalog_id = 2;
    string cart_id = 3;
    tools.teal.pulsar.demoapp.dto.v1.Product product = 4;
    int32 quantity = 5;
}

message CreateInventory {
    string inventory_id = 1;
    string owner_id = 2;
}

message WarehouseCommandsSchema {
    oneof command {
        ReceiveInventoryItem receive_inventory_item = 1;
        IncreaseInventoryAdjust increase_inventory_adjust = 2;
        DecreaseInventoryAdjust decrease_inventory_adjust = 3;
        ReserveInventoryItem reserve_inventory_item = 4;
        CreateInventory create_inventory = 5;
    }
}
